--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,8 @@
 .DS_Store
 npm-debug.log
-/node_modules
-/plugins
 local.properties
-
-platforms/ios/build/
-platforms/ios/www/
-platforms/ios/cordova/console.log
+plugins/
+node_modules/
+platforms/
 *.xcuserdatad
-
-platforms/android/assets/www
-platforms/android/bin
-platforms/android/gen
-platforms/android/local.properties
-platforms/android/ant-build
-platforms/android/ant-gen
-platforms/android/CordovaLib/ant-build
-platforms/android/CordovaLib/ant-gen
-platforms/android/CordovaLib/bin
-platforms/android/CordovaLib/gen
-platforms/android/CordovaLib/local.properties
-
-platforms/wp8/bin
-platforms/wp8/obj
-platforms/wp8/www
-platforms/wp8/.staging
-platforms/wp8/*.suo
-platforms/wp8/*.csproj.user
-
 resources/signing
