--- a/package.json
+++ b/package.json
@@ -8,5 +8,22 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Apache Cordova Team",
-    "license": "Apache-2.0"
+    "license": "Apache-2.0",
+    "dependencies": {
+        "cordova-android": "^7.1.0",
+        "cordova-bridge-connecthings": "git+https://github.com/Connecthings/cordova-bridge-connecthings.git",
+        "cordova-ios": "^4.5.4",
+        "cordova-plugin-add-swift-support": "git+https://github.com/akofman/cordova-plugin-add-swift-support.git",
+        "cordova-plugin-whitelist": "^1.3.3"
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-whitelist": {},
+            "cordova-bridge-connecthings": {}
+        },
+        "platforms": [
+            "ios",
+            "android"
+        ]
+    }
 }
