--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
-        "cordova-android": "^7.1.0",
-        "cordova-bridge-connecthings": "git+https://github.com/Connecthings/cordova-bridge-connecthings.git",
-        "cordova-ios": "^4.5.4",
-        "cordova-plugin-add-swift-support": "git+https://github.com/akofman/cordova-plugin-add-swift-support.git",
-        "cordova-plugin-whitelist": "^1.3.3"
+        "cordova-android": "^7.1.1",
+        "cordova-bridge-connecthings": "file:../cordova-bridge-connecthings",
+        "cordova-ios": "^4.5.5",
+        "cordova-plugin-add-swift-support": "^1.7.2",
+        "cordova-plugin-cocoapod-support": "^1.6.0",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "npm": "^6.4.1"
     },
     "cordova": {
         "plugins": {
