--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
+        "cordova": "^8.1.2",
         "cordova-android": "^7.1.1",
         "cordova-bridge-connecthings": "file:../cordova-bridge-connecthings",
         "cordova-ios": "^4.5.5",
@@ -24,8 +25,8 @@
             "cordova-bridge-connecthings": {}
         },
         "platforms": [
-            "ios",
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
