--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "dependencies": {
         "cordova": "^8.1.2",
         "cordova-android": "^7.1.1",
-        "cordova-bridge-connecthings": "file:../cordova-bridge-connecthings",
+        "cordova-bridge-connecthings": "git+https://github.com/Connecthings/cordova-bridge-connecthings.git",
         "cordova-ios": "^4.5.5",
-        "cordova-plugin-add-swift-support": "^1.7.2",
-        "cordova-plugin-cocoapod-support": "^1.6.0",
+        "cordova-plugin-add-swift-support": "1.7.2",
+        "cordova-plugin-cocoapod-support": "1.6.0",
         "cordova-plugin-whitelist": "^1.3.3",
         "npm": "^6.4.1"
     },
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-bridge-connecthings": {}
+            "cordova-bridge-connecthings": {},
+            "cordova-plugin-add-swift-support": {},
+            "cordova-plugin-cocoapod-support": {}
         },
         "platforms": [
             "android",
