--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "license": "Apache-2.0",
     "dependencies": {
         "cordova": "^8.1.2",
-        "cordova-plugin-cocoapod-support": "1.6.0",
+        "cordova-android": "^8.0.0",
+        "cordova-ios": "^5.0.1",
+        "cordova-plugin-add-swift-support": "^1.7.2",
+        "cordova-plugin-cocoapod-support": "^1.6.0",
         "cordova-plugin-whitelist": "^1.3.3",
         "npm": "^6.4.1"
     },
@@ -21,6 +24,9 @@
             "cordova-plugin-add-swift-support": {},
             "cordova-plugin-cocoapod-support": {}
         },
-        "platforms": []
+        "platforms": [
+            "android",
+            "ios"
+        ]
     }
 }
