--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "cordova": "^8.1.2",
         "cordova-android": "^8.0.0",
         "cordova-ios": "^5.0.1",
-        "cordova-plugin-add-swift-support": "^1.7.2",
+        "cordova-plugin-add-swift-support": "^2.0.2",
         "cordova-plugin-cocoapod-support": "^1.6.0",
         "cordova-plugin-whitelist": "^1.3.3",
         "npm": "^6.4.1"
@@ -21,12 +21,9 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-add-swift-support": {},
-            "cordova-plugin-cocoapod-support": {}
+            "cordova-plugin-cocoapod-support": {},
+            "cordova-plugin-add-swift-support": {}
         },
-        "platforms": [
-            "android",
-            "ios"
-        ]
+        "platforms": []
     }
 }
