--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "license": "Apache-2.0",
     "dependencies": {
         "cordova": "^8.1.2",
-        "cordova-android": "^8.1.0",
+        "cordova-bridge-connecthings": "file:../cordova-bridge-connecthings",
         "cordova-ios": "^5.0.1",
         "cordova-plugin-add-swift-support": "^2.0.2",
         "cordova-plugin-cocoapod-support": "^1.6.0",
@@ -22,11 +22,11 @@
         "plugins": {
             "cordova-plugin-whitelist": {},
             "cordova-plugin-cocoapod-support": {},
-            "cordova-plugin-add-swift-support": {}
+            "cordova-plugin-add-swift-support": {},
+            "cordova-bridge-connecthings": {}
         },
         "platforms": [
-            "ios",
-            "android"
+            "ios"
         ]
     }
 }
