--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "license": "Apache-2.0",
     "dependencies": {
         "cordova": "^8.1.2",
-        "cordova-bridge-connecthings": "file:../cordova-bridge-connecthings",
+        "cordova-android": "^8.0.0",
+        "cordova-bridge-connecthings": "git+https://github.com/Connecthings/cordova-bridge-connecthings.git",
         "cordova-ios": "^5.0.1",
         "cordova-plugin-add-swift-support": "^2.0.2",
-        "cordova-plugin-cocoapod-support": "^1.6.0",
+        "cordova-plugin-cocoapod-support": "^1.6.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "npm": "^6.4.1"
     },
