--- a/www/assets/connectplace-settings.plist
+++ b/www/assets/connectplace-settings.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>ct_url_type</key>
-	<string>LOCAL / DEMO / ITG / PRE_PROD / PROD / PROD_US</string>
+	<string>PROD</string>
 	<key>ct_login</key>
 	<string>yourLogin</string>
 	<key>ct_password</key>
@@ -11,6 +11,8 @@
 	<key>ct_company</key>
 	<string>yourCompany</string>
 	<key>askLocationPermissionAtStart</key>
+	<false/>
+	<key>askNotificationPermissionAtStart</key>
 	<false/>
 </dict>
 </plist>
